fix issue where text was jumping

--- a/src/styles/styles_multiple_choice.css
+++ b/src/styles/styles_multiple_choice.css
@@ -487,7 +487,7 @@ html {
 	  	.gameMessageEmailScreen {
 	      width:50%;
 	      top: 15px;
-	      font-size: 1.25em;
+	      font-size: 1.125em;
 	      color: black;
 	      position: absolute;
 	      font-family: 'DIN Condensed';
@@ -568,13 +568,13 @@ html {
   }
 
   @media screen and (max-width:345px){
-  	.gameMessage { display: none;}
+  	.gameMessage { }
 
   	.interactionContainer { width: 320px; }
 
   	.gameImageGridImageContainer { width: 160px; }
 
-  	.gameImageGrid { width: 320px; }
+  	.gameImageGrid { width: 330px; }
 
   	#gameContainer { width: 320px; }
 
@@ -586,12 +586,19 @@ html {
 
   	.resultImage { width: 320px; }
 
+  	.overlay { width: 320px; }
+
   	.gadgetRecommendation { left: 30px; }
 
   	#resultMessageText { width: 90%; left: 2px; font-size: 1.2em;}
 
   	#emailFormInput { right: 15px; }
 
+  	#emailFormButton { right: 15px; }
+
+	.gameTitleFinalScreen { width: 80%; left: 20px; }
+
+	.shareButtonsContainer { left: 0px; }
 
   }
 }
